--- a/src/app/modules/studentexam/exams/exams.component.html
+++ b/src/app/modules/studentexam/exams/exams.component.html
@@ -55,7 +55,7 @@ marks can no longer be entered/edited for that examination.
                     <mat-select [(ngModel)]="element.ClassGroupId" (selectionChange)="onBlur(element)"
                         [value]="element.ClassGroupId">
                         <mat-option value="0">select</mat-option>
-                        <mat-option *ngFor="let item of ClassGroups" [value]="item.MasterDataId">{{item.MasterDataName}}
+                        <mat-option *ngFor="let item of ClassGroups" [value]="item.ClassGroupId">{{item.GroupName}}
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
