--- a/src/app/modules/studentexam/examstudentsubjectresult/examstudentsubjectresult.component.html
+++ b/src/app/modules/studentexam/examstudentsubjectresult/examstudentsubjectresult.component.html
@@ -61,7 +61,8 @@
                         </div>
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <mat-form-field style="text-align: center;" *ngIf="disCol !='StudentClassSubject' && disCol !='Action'">
+                        <mat-form-field style="text-align: center;" 
+                            *ngIf="disCol !='StudentClassSubject' && disCol !='Action'">
                             <input matInput type="number" (blur)="onBlur(element,$event)" [attr.name]="disCol"
                                 [value]="element[disCol]" [(ngModel)]="element[disCol]">
                         </mat-form-field>
