--- a/src/app/modules/studentexam/studentgrade/studentgrade.component.scss
+++ b/src/app/modules/studentexam/studentgrade/studentgrade.component.scss
@@ -2,7 +2,8 @@ mat-form-field{
     width: 98%;
     margin-right: 15px;
 }
-.mat-column-GradeTypeId,
+.mat-column-SubjectCategoryId,
+.mat-column-GradeStatusId,
 .mat-column-Sequence
 {    
     flex:1 0 100px;
