--- a/src/app/shared/components/sidebar/sidebar.component.scss
+++ b/src/app/shared/components/sidebar/sidebar.component.scss
@@ -11,7 +11,8 @@
     width:100%;
     float: left;
 }
-.active-list-item {
-    color: #3F51B5 !important; /* Note: You could also use a custom theme */
-  }
+// .active-list-item {
+//     color: #3F51B5 !important; /* Note: You could also use a custom theme */
+//   }
+
  
