--- a/src/app/modules/evaluation/evaluationmaster/evaluationmaster.component.html
+++ b/src/app/modules/evaluation/evaluationmaster/evaluationmaster.component.html
@@ -50,7 +50,7 @@
                 <mat-form-field appearance="outline">
                     <mat-select (selectionChange)="onBlur(element)" [value]="element.ClassGroupId"
                         [(ngModel)]="element.ClassGroupId">
-                        <mat-option *ngFor="let item of ClassGroups" [value]="item.MasterDataId">{{item.MasterDataName}}
+                        <mat-option *ngFor="let item of ClassGroups" [value]="item.ClassGroupId">{{item.GroupName}}
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
